added CSS styles

--- a/tickets.css
+++ b/tickets.css
@@ -1,16 +1,11 @@
-body {
-    
-    background-image: url('https://s.yimg.com/ny/api/res/1.2/UR3ch3CANJoPLyMT0BcGmw--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9NzUwO2g9Mzcw/https://media.zenfs.com/en-US/mmaweekly.com/0f694faf7d6f40d92d35b97c7b8d7993');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed
-    
-        
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+* {
+    box-sizing: border-box;
 }
-.main{
-    opacity: 1.0;
-    background-color: gray;
-    height: 100%;
 
+body {
+    background-color: #242333;
+    display: flex;
+    
 }
