--- a/tickets.css
+++ b/tickets.css
@@ -6,6 +6,61 @@
 
 body {
     background-color: #242333;
+    color: white;
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: 'lato', sans-serif;
+    margin: 0;
+
+}
+.movie-container{
+    margin: 20px 0;
+}
+#movie{
+    background-color: white;
+    border: 0;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-left: 10px;
+    padding: 5px 15px 5px 15px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.seat {
+    background-color: #444451;
+    height: 12px;
+    width: 15px;
+    margin: 3px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+
+}
+
+.seat.selected{
+    background-color: #6feaf6;
+}
+.seat.occupied{
+    background-color: white;
+}
+.seat:nth-of-type(2) {
+    margin-right: 18px;
+}
+
+.seat:not(.seat.occupied):hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.seat:nth-last-of-type(2) {
+    margin-left: 18px;
+}
+
+.row{
+    display: flex;
 }
