--- a/tickets.css
+++ b/tickets.css
@@ -10,14 +10,20 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
     height: 100vh;
     font-family: 'lato', sans-serif;
     margin: 0;
 
 }
+
+
 .movie-container{
     margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 #movie{
     background-color: white;
@@ -91,39 +97,27 @@ body {
 }
 
 
-.row{
+/* .row{
     display: flex;
-}
-/* .screen{
-background-color: white;
-height: 57px;
-width: 57px;
-margin: 15px;
-left: 22px;
-transform: rotateX(145deg) skew(22.5deg);
-box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
-}
-.screen:before{
-    top: -29px;
-}
-.screen:after{
-    top: 27px;
-}
-
-.screen span {
+    
+    
+} */
+/* #row1-container {
     position: absolute;
+    left: 5%;
     top: 0;
-    left: 0;
-    width: 100px;
-    height: 55px;
-    background: white;
-    z-index: 1;
+
+}
+#row2-container{
+    position: absolute;
+    left: 65%;
+
 } */
 
 .screen {
     width: 100px;
     height: 100px;
-    background: red;
+    background: gray;
     position: relative;
     }
     .screen:before {
@@ -133,9 +127,9 @@ box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
     position: absolute;
     top: 0;
     left: 0;
-    border-bottom: 29px solid red;
-    border-left: 29px solid #eee;
-    border-right: 29px solid #eee;
+    border-bottom: 29px solid gray;
+    border-left: 29px solid black;
+    border-right: 29px solid black;
     }
     .screen:after {
     content: "";
@@ -144,7 +138,7 @@ box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
     position: absolute;
     bottom: 0;
     left: 0;
-    border-top: 29px solid red;
-    border-left: 29px solid #eee;
-    border-right: 29px solid #eee;
+    border-top: 29px solid gray;
+    border-left: 29px solid black;
+    border-right: 29px solid black;
     }  
