--- a/tickets.css
+++ b/tickets.css
@@ -58,6 +58,9 @@ img {
 
 #character-box2{
     background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 600px;
+    border: thin solid black;
 }
 
 .versus{
@@ -67,4 +70,9 @@ img {
 
 .Khabibinfo{
     color: white;
+}
+
+.Israelinfo{
+    color: white;
+
 }
