put in all fighters pictures

--- a/tickets.css
+++ b/tickets.css
@@ -68,11 +68,15 @@ img {
 }
 
 
-.Khabibinfo{
+/* .Khabibinfo{
     color: white;
 }
 
 .Israelinfo{
     color: white;
 
+} */
+
+p{
+    color: white;
 }
